syntax = "proto3";

option go_package = "main/internal/microservices/session/proto";
//  protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative   session.proto
service SessionService {
  rpc CheckSession (SessionId) returns (Status) {}
  rpc GetUserId (SessionId) returns (UserId) {}
}

message SessionId {
  string sessionId = 1;
}

message UserId {
  string userId = 1;
}

message Status {
  bool isOk = 1;
}
